# Fin2

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: base.yaml  universe_mech2020.yaml
data/: trading.duckdb.wal
docs/plan/: CODING_PLAN.md  PHASE_0_FOUNDATIONS.md  PHASE_1_DATA.md  PHASE_2_SIGNALS.md  PHASE_3_RISK.md  PHASE_4_EXECUTION.md  PHASE_5_LLM_FEATURES.md  PHASE_6_BACKTEST_WFO.md  PHASE_9_SCREENER.md  (+2 more)
scripts/: __init__.py  ab_sentiment.py  bootstrap_sharpe.py  build_universe.py  long_short_sharpe.py  run_backtest.py  run_paper.py  run_screener.py  score_news.py  sentiment_drift_ic.py  sync_data.py  train_hmm.py  train_lgbm.py
tests/: _helpers.py  conftest.py  test_alerts.py  test_alpaca_data.py  test_architecture.py  test_backtest_engine.py  test_backtest_metrics.py  test_bootstrap.py  test_broker.py  test_circuit_breaker.py  test_config.py  test_data_models.py  test_entrypoints.py  test_exposure_tracker.py  test_features.py  test_finbert_sentiment.py  test_ic.py  test_kelly.py  test_labels.py  test_lgbm_signal.py  test_llm_sentiment.py  test_logging_setup.py  test_long_short.py  test_mean_reversion_strategy.py  test_momentum_strategy.py  test_polygon_client.py  test_regime_hmm.py  test_risk_manager.py  test_score_news.py  test_screener.py  test_sentiment_lookup.py  test_storage.py  test_strategy_parity.py  test_stream_manager.py  test_train_lgbm.py  test_universe_builder.py  test_vol_target.py  test_wfo.py  test_xsec_reversion.py  test_zscore_signal.py
(+49 files in other folders)
