[project]
name = "finbot"
version = "0.1.0"
description = "Algorithmic trading system — backtest and live share one codebase (Alpaca paper by default)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "redis>=5.0",
    "alpaca-py>=0.30",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "hmmlearn>=0.3",
    "optuna>=3.6",
    "joblib>=1.4",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
backtest = [
    "quantstats>=0.0.62",
    "plotly>=5.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "T20", "RUF"]
# T20 bans print() — structured logging only (root CLAUDE.md)

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "integration: needs external services (Redis, API keys) — excluded in CI unit job",
]
